2004-01-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-treat-ansi-sequences,
	article-treat-ansi-sequences): New variable and function.
	Suggested by Dan Jacobson <jidanni@jidanni.org>.

	* gnus-sum.el (gnus-summary-wash-map, gnus-summary-make-menu-bar):
	Use it.

2004-01-05  Jesper Harder  <harder@ifa.au.dk>

	* mm-util.el (mm-quote-arg): Remove.

	* mm-decode.el (mm-mailcap-command): Replace mm-quote-arg with
	shell-quote-argument.

	* gnus-uu.el (gnus-uu-command): do.

	* gnus-sum.el (gnus-summary-insert-pseudos): do.

	* ietf-drums.el (ietf-drums-token-to-list): Replace mm-make-char
	with make-char.

	* mm-util.el (mm-make-char): Remove.

	* mml.el (mml-mode): Replace gnus-add-minor-mode with
	add-minor-mode.

	* gnus-undo.el (gnus-undo-mode): do.

	* gnus-topic.el (gnus-topic-mode): do.

	* gnus-sum.el (gnus-dead-summary-mode): do.

	* gnus-start.el (gnus-slave-mode): do.

	* gnus-salt.el (gnus-binary-mode, gnus-pick-mode): do.

	* gnus-ml.el (gnus-mailing-list-mode): do.

	* gnus-gl.el (gnus-grouplens-mode): do.

	* gnus-draft.el (gnus-draft-mode): do.

	* gnus-dired.el (gnus-dired-mode): do.

	* gnus-ems.el (gnus-add-minor-mode): Remove.

	* gnus-spec.el (gnus-correct-length, gnus-correct-substring):
	Replace gnus-char-width with char-width.

	* gnus-ems.el (gnus-char-width): Remove.

	* gnus-spec.el (gnus-correct-length, gnus-correct-substring):
	Replace gnus-char-width with char-width.

	* gnus-ems.el (gnus-char-width): Remove.

	* spam-stat.el (with-syntax-table): Remove with-syntax-table
	definition.
	Remove Emacs 20 hash table compatibility code.

	* rfc2047.el (with-syntax-table): Remove with-syntax-table Emacs
	20 compatibility code.

	* spam.el (spam-point-at-eol): Replace with point-at-eol.

	* smime.el (smime-point-at-eol): Replace with point-at-eol.

	* rfc2047.el (rfc2047-point-at-bol, rfc2047-point-at-eol): Replace
	with point-at-{eol,bol}.

	* netrc.el (netrc-point-at-eol): Replace with point-at-eol.
